--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
         <div class="container">
             <div style="color:#eeeeee;">
                 <h1>树洞</h1>
-                <h3>私人秘密宝匣</h3>
+                <h3>个人秘密保险柜</h3>
                 <p>放入树洞的秘密仅自己可见，请妥善保管钱包私钥，若丢失以前放入的秘密将不能找回。</p>
+                <p>秘密成功提交，将<span class="label label-danger" style="margin-right: 1em">不可修改</span><span class="label label-danger">不可删除</span></p>
                 <button type="button" class="btn btn-success  btn-lg" data-toggle="modal" data-target="#myModal">放入秘密</button>
                 <p></p>
                 <div id="wallter" class="alert alert-warning" role="alert" style="display: none;">
