--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img src="img/slogo.png" />
                 <div class="row">
                     <div class="col-md-8">
-                        <h2>不可修改</h2>
+                        <h2>永久记录</h2>
                         <p>生活一旦记录，将永远不能删除、修改。</p>
                         <h2>中文口令支持</h2>
                         <p>您可以用一句话(如诗词、歌句等)作为口令,方便永久记忆。</p>
