--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="http://apps.bdimg.com/libs/crypto-js/3.1.2/rollups/aes.js"></script>
-    <script type="text/javascript" src="http://apps.bdimg.com/libs/crypto-js/3.1.2/rollups/md5.js">
+    <script src="https://apps.bdimg.com/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+    <script type="text/javascript" src="https://apps.bdimg.com/libs/crypto-js/3.1.2/rollups/md5.js">
     </script>
     <script type="text/javascript" src="js/particles.min.js"></script>
     <script type="text/javascript" src="js/start.js"></script>
